# czoi_with_unilog_toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
czoi/: __init__.py  cli.py  constraint.py  core.py  daemons.py  embedding.py  neural.py  permission.py  simulation.py  storage.py  utils.py
czoi/integrations/: __init__.py  django.py  fastapi.py  flask.py
czoi/unilog/: __init__.py
czoi/unilog/ast/: base.py
czoi/unilog/engine/: __init__.py  core.py  model.py  registry.py  solvers.py
czoi/unilog/integration/: __init__.py  model_adapter.py
czoi/unilog/parser/: UniLang.g4  __init__.py  ast_builder.py
czoi/unilog/utils/: __init__.py  visitors.py
examples/: system-design.md
examples/education-uam/: uam-simulation-simple-engine.py  uam-simulation-simpy.py  uam-simulation.py  uam-simulations-complete.py  uam.py
examples/finance-gfts/: gfts-simulation-simple-engine.py  gfts-simulation.py  gfts-simulations-complete.py  gfts.py
examples/healthcare-nhs/: nhs-simulation-simple-engine.py  nhs-simulation-simpy.py  nhs-simulation.py  nhs-simulations-complete.py  nhs.py
examples/smartcity-sctm/: sctm-simulation-simple-engine.py  sctm-simulation-simpy.py  sctm-simulation.py  sctm.py  smtm-simulations-complete.py
examples/supplychain-dc/: scdc-simulation-simple-engine.py  scdc-simulation-simpy.py  scdc-simulation.py  scdc.py  supplychain-simulations-complete.py
tests/: conftest.py  test_constraint.py  test_core.py  test_logic_parser.py
